Issue #10271 - new jetty-home `pid` module (#10272)
* Issue #10271 - new jetty-home module `pid`

Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>